--- a/eishi.html
+++ b/eishi.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <main>
+        <h1>IU the most popular female singer in Korea </h1>
+        <div>
+            <h2> About </h2>
+            <p> Lee Ji-eun (Korean: 이지은; born May 16, 1993[1]), also known by her stage name IU (아이유), is a South Korean
+                singer-songwriter and actress. She signed with LOEN Entertainment (now Kakao Entertainment) in 2007 as a
+                trainee and
+                debuted as a singer at the age of fifteen with Lost and Found (2008), her first extended play (EP).
+                Although her
+                follow-up albums, Growing Up and IU...IM, brought mainstream success, it was only after the release of
+                "Good Day", the
+                lead single from her 2010 album Real, that she achieved national stardom. "Good Day" went on to spend
+                five consecutive
+                weeks at the top of South Korea's Gaon Digital Chart, and in 2019, it was ranked number one on
+                Billboard's "100 Greatest
+                K-Pop Songs of the 2010s" list </p>
+            <img src="https://ss-images.saostar.vn/pc/1680851009890/saostar-2ka5fti72hsf2wck.jpeg" </div>
+            <div>
+                <h2>Album</h2>
+                <ul>
+                    <li>Growing Up </li>
+                    <li>Last Fantasy</li>
+                    <li>Modern Times</li>
+                    <li>Palette</li>
+                    <li>Lilac</li>
+                    <li>The winning</li>
+                </ul>
+                <a href="https://open.spotify.com/artist/3HqSLMAZ3g3d5poNaI7GOU" <h3>IU Songs</h3></a>
+            </div>
+            <div>
+                <h2>Gallery</h2>
+                <img src="https://cdn.tuoitre.vn/471584752817336320/data/teen360/pictures/2021/03/25/1616683771_saostar-atvtddueixg1wshl.jpg"
+                    width="20%">
+                <img src="https://cdns-images.dzcdn.net/images/cover/46312f17040f9f250e6a86854e8eec48/1900x1900-000000-80-0-0.jpg"
+                    width="20%">
+                <img src="https://photo.znews.vn/w660/Uploaded/pcgmvvbb/2020_10_10/2_2.jpg" width="20%">
+                <img src="https://i.ebayimg.com/images/g/vdsAAOSwIqRcd8vx/s-l400.jpg">
+
+            </div>
+
+
+
+
+    </main>
+</body>
+
+</html>
